check and fix error

--- a/popup/index.html
+++ b/popup/index.html
@@ -43,6 +43,6 @@
         <input type="button" id="scraper_repasitory" value="저장소 열기">
         <input type="button" id="change_repasitory_location" value="저정소 위치 변경">
     </div>
-    <script src="app.js"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
